# argus

./: .editorconfig  .env.example  .gitattributes  .gitignore  BOARD.md  CLAUDE.md  Dockerfile  FRONTEND_BLUEPRINT.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
argus/: __init__.py  cli.py
argus/ai/: __init__.py  anomaly_explain.py  base.py  client.py  fallback.py  grounding.py  query.py  reports.py
argus/alert/: __init__.py  delivery.py
argus/aoi/: __init__.py  loader.py
argus/api/: __init__.py  app.py  schemas.py
config/: alert_channels.yaml  dem_sources.yaml  oil_classifier.yaml  oil_types.yaml  schedule.yaml  settings.dev.yaml  settings.test.yaml  settings.yaml
docs/: DEMO_MODE.md  DEMO_SCRIPT.md  DEVELOPER_ONBOARDING.md  PROJECT_WALKTHROUGH.md  spec_graph.md  spec_graph.yaml
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
models/: oil_classifier_v1.pkl
tests/: conftest.py  test_acid_deposition.py  test_acquire.py  test_alert_delivery.py  test_anomaly_detector.py  test_anomaly_explain.py  test_aoi_loader.py  test_api.py  test_api_contracts.py  test_catalogue.py  test_choke_points.py  test_classifier.py  test_config.py  test_error_handling.py  test_eval_harness.py  test_export.py  test_features.py  test_flood_risk.py  test_forcing_providers.py  test_forecast_frames.py  test_grounding_guard.py  test_health.py  test_hydro_alerts.py  test_hydro_viewer.py  test_impact_assessor.py  test_incremental_ingest.py  test_inland_wq_analyzer.py  test_landmask.py  test_logging.py  test_nl_query.py  test_nl_reports.py  test_observability.py  test_observation_schema.py  test_oil_detector.py  test_oil_trajectory_service.py  test_optical_indices.py  test_phase0_e2e.py  test_preprocess.py  test_s2_catalogue.py  test_s3_catalogue.py  (+11 more)
(+213 files in other folders)
